# ezbookkeeping_mcp_server

./: .env.example  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MCP_SERVER_DESIGN.md  QUICKSTART.md  README.md  main.py  pyproject.toml
.claude/: CLAUDE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/config/: settings.py
src/resources/: accounts.py
src/tools/: transactions.py
src/utils/: http_client.py
